Fix issue with radio option wrapping

--- a/app/assets/stylesheets/keroauc.css.scss
+++ b/app/assets/stylesheets/keroauc.css.scss
@@ -74,6 +74,7 @@ h1{
     font-size: 14pt;
     padding: 5px;
     color: #bdc3c7;
+    display: inline-block;
     .radio-unchecked:before {
       content: "\e02b";
       font-family: 'Flat-UI-Icons';
